--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -118,6 +118,8 @@ body {
 @import 'main/work';
 @import 'main/contact';
 @import 'news/our';
+@import 'news/lorem';
+@import 'oneNews/antrax';
 
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
