to finished page one news and start projects page

--- a/src/scss/main/projects.scss
+++ b/src/scss/main/projects.scss
@@ -438,6 +438,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: 170.66%;
+      color: #fff;
 
       @media (max-width: 1024px) {
         font-size: 11px;
@@ -466,6 +467,7 @@
       font-style: normal;
       font-weight: 700;
       line-height: 126.776%; /* 27.891px */
+      color: #fff;
 
       @media (max-width: 1024px) {
         font-size: 20px;
@@ -478,6 +480,7 @@
       font-style: normal;
       font-weight: 700;
       line-height: 126.776%; /* 27.891px */
+      color: #fff;
 
       @media (max-width: 1024px) {
         font-size: 20px;
@@ -520,6 +523,7 @@
       line-height: normal;
       letter-spacing: 1.2px;
       text-transform: uppercase;
+      color: #fff;
     }
   }
 
@@ -570,6 +574,7 @@
       line-height: normal;
       letter-spacing: 1.2px;
       text-transform: uppercase;
+      color: #fff;
     }
   }
 }
