--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -120,6 +120,9 @@ body {
 @import 'news/our';
 @import 'news/lorem';
 @import 'oneNews/antrax';
+@import 'oneNews/ourLatest';
+@import 'oneNews/ourLatest';
+@import 'projects/ourProjects';
 
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
