--- a/src/scss/layout/headerBlack.scss
+++ b/src/scss/layout/headerBlack.scss
@@ -11,6 +11,10 @@
     min-height: 94px;
     margin-bottom: 44px;
   }
+  @media(max-width: 575px) {
+    min-height: 57px;
+    margin-bottom: 44px;
+  }
   @media(max-width: 376px) {
     min-height: 63px;
     margin-bottom: 53px;
