--- a/src/scss/oneNews/antrax.scss
+++ b/src/scss/oneNews/antrax.scss
@@ -1,11 +1,23 @@
 .antrax {
+  margin-bottom: 203px;
+  @media(max-width: 1024px) {
+    margin-bottom: 212px;
+  }
+  @media (max-width: 768px) {
+    margin-bottom: 177px;
+  }
+  @media (max-width: 376px) {
+    margin-bottom: 145px;
+  }
   p {
     color: var(--1, #080808);
-    font-size: 13px;
     font-style: normal;
     font-weight: 300;
     line-height: 24px;
     opacity: 0.7;
+    @media (max-width: 1024px) {
+      font-size: 14px;
+    }
   }
   h3 {
     color: var(--1, #080808);
@@ -32,16 +44,39 @@
 
   &__text-container {
     padding: 0 134px;
-    position: relative;
+    @media (max-width: 1024px) {
+      padding: 0 93px 0 104px;
+    }
+    @media (max-width: 768px) {
+      padding: 0 75px;
+    }
+    @media (max-width: 575px) {
+      padding: 0;
+    }
+  }
 
+  &__line-container {
+    position: relative;
     &::after {
-        position: absolute;
-        content: '';
+      position: absolute;
+      content: "";
+      width: 79%;
+      height: 1px;
+      bottom: -62px;
+      background: #828282;
+      opacity: 0.16;
+      @media (max-width: 1024px) {
+        width: 77%;
+        bottom: -89px;
+      }
+      @media (max-width: 768px) {
+        width: 89%;
+        bottom: -73px;
+      }
+      @media (max-width: 575px) {
         width: 100%;
-        height: 1px;
-        bottom: -62px;
-        background: #828282;
-        opacity: 0.16;
+        bottom: -64px;
+      }
     }
   }
 
@@ -51,27 +86,81 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 20px;
+    @media (max-width: 768px) {
+      padding-bottom: 12px;
+    }
+    @media (max-width: 575px) {
+      padding-bottom: 15px;
+    }
   }
 
   // .antrax__top-title
 
   &__top-title {
     max-width: 474px;
+    @media (max-width: 1024px) {
+      max-width: 470px;
+    }
     h1 {
       color: var(--1, #080808);
       font-size: 36px;
       font-style: normal;
       font-weight: 700;
       line-height: normal;
+      @media (max-width: 1024px) {
+        font-size: 32px;
+      }
+      @media (max-width: 575px) {
+        font-size: 26px;
+      }
     }
   }
 
   // .antrax__top-right
 
   &__top-right {
+    @media (max-width: 1024px) {
+      padding-top: 9px;
+    }
+    @media (max-width: 768px) {
+      padding-top: 1px;
+    }
     p {
       padding-top: 8px;
       padding-bottom: 12px;
+      position: relative;
+      @media (max-width: 575px) {
+        padding-top: 0;
+        padding-bottom: 10px;
+      }
+
+      &::after {
+        position: absolute;
+        content: "";
+        width: 255px;
+        height: 1px;
+        bottom: 23px;
+        left: 64px;
+        background: #828282;
+        opacity: 0.16;
+
+        @media (max-width: 1133px) {
+          display: none;
+        }
+      }
+    }
+  }
+
+  &__top-desktop-links {
+    @media (max-width: 1133px) {
+      display: none;
+    }
+  }
+
+  &__bottom-mobile-links {
+    display: none;
+    @media (max-width: 1133px) {
+      display: block;
     }
   }
 
@@ -80,6 +169,9 @@
   &__top-links {
     display: flex;
     gap: 7px;
+    @media (max-width: 575px) {
+      gap: 8px;
+    }
   }
 
   // .antrax__top-link
@@ -89,6 +181,10 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
+    @media (max-width: 575px) {
+      width: 24px;
+      height: 24px;
+    }
 
     svg {
       position: absolute;
@@ -126,14 +222,42 @@
   // .antrax__top-text
 
   &__top-text {
-    max-width: 720px;
+    max-width: 708px;
     padding-bottom: 100px;
+    @media (max-width: 1024px) {
+      padding-bottom: 73px;
+      max-width: 702px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 65px;
+    }
+    @media (max-width: 575px) {
+      padding-bottom: 56px;
+    }
+
+    p {
+      font-size: 14px;
+    }
   }
 
   // .antrax__top-img
 
   &__top-img {
     padding-bottom: 94px;
+    @media (max-width: 1024px) {
+      padding-bottom: 88px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 73px;
+    }
+    @media (max-width: 575px) {
+      padding-bottom: 63px;
+    }
+    img {
+      @media (max-width: 575px) {
+        min-height: 220px;
+      }
+    }
   }
 
   // .antrax__center-content
@@ -144,27 +268,71 @@
   // .antrax__center-title
 
   &__center-title {
-    max-width: 394px;
-    font-size: 14px;
+    max-width: 405px;
+    font-size: 16px;
     padding-bottom: 15px;
+    @media (max-width: 1024px) {
+      max-width: 401px;
+      padding-bottom: 21px;
+    }
   }
 
   // .antrax__center-text
 
   &__center-text {
     padding-bottom: 39px;
-    max-width: 738px;
+    max-width: 720px;
+    font-size: 14px;
+    @media (max-width: 1024px) {
+      padding-bottom: 22px;
+      max-width: 705px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 33px;
+    }
+    @media (max-width: 575px) {
+      padding-bottom: 21px;
+    }
+  }
+
+  &__center-desktop-text {
+    max-width: 715px;
+    @media (max-width: 1024px) {
+      display: none;
+    }
+  }
+
+  &__center-mobile-text {
+    display: none;
+    @media (max-width: 1024px) {
+      display: block;
+      padding-bottom: 19px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 14px;
+    }
+    @media (max-width: 575px) {
+      padding-bottom: 7px;
+    }
   }
 
   // .antrax__center-list
 
   &__center-list {
     padding-left: 13px;
-    padding-left: 13px;
     display: flex;
     flex-direction: column;
     gap: 12px;
     padding-bottom: 41px;
+    @media (max-width: 1024px) {
+      padding-bottom: 32px;
+    }
+    @media (max-width: 768px) {
+      gap: 10px;
+    }
+    @media (max-width: 575px) {
+      padding-left: 15px;
+    }
     li {
       list-style-type: decimal;
     }
@@ -175,6 +343,12 @@
   &__center-img {
     padding-top: 61px;
     padding-bottom: 7px;
+    img {
+      @media (max-width: 575px) {
+        min-height: 220px;
+        object-fit: cover;
+      }
+    }
   }
 
   // .antrax__center-imgs
@@ -183,6 +357,24 @@
     display: flex;
     gap: 8px;
     padding-bottom: 95px;
+    @media (max-width: 1024px) {
+      padding-bottom: 92px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 77px;
+    }
+    @media (max-width: 575px) {
+      flex-direction: column;
+      padding-bottom: 61px;
+    }
+  }
+
+  &__center-picture {
+    img {
+      @media (max-width: 575px) {
+        min-height: 394px;
+      }
+    }
   }
 
   // .antrax__bottom-content
@@ -193,14 +385,24 @@
   // .antrax__bottom-title
 
   &__bottom-title {
-    padding-bottom: 16px;
+    padding-bottom: 15px;
+    font-size: 16px;
+    @media (max-width: 1024px) {
+      padding-bottom: 23px;
+    }
+    @media (max-width: 575px) {
+      padding-bottom: 22px;
+    }
   }
 
   // .antrax__bottom-text
 
   &__bottom-text {
-    max-width: 752px;
+    max-width: 720px;
     padding-bottom: 39px;
+    @media (max-width: 1024px) {
+      padding-bottom: 32px;
+    }
   }
 
   // .antrax__bottom-list
@@ -211,6 +413,12 @@
     flex-direction: column;
     gap: 12px;
     padding-bottom: 40px;
+    @media (max-width: 1024px) {
+      padding-bottom: 31px;
+    }
+    @media (max-width: 768px) {
+      gap: 10px;
+    }
     li {
       list-style-type: circle;
     }
