is finished projects page and start oneProject page and to fixed bags with dropdown on blocks where added tabs

--- a/src/components/flatCard.html
+++ b/src/components/flatCard.html
@@ -4,8 +4,8 @@
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
     </div>
   </div>
-  <div class="flatCard__right">
-    <div class="flatCard__right-text">
+  <div class="flatCard__right ourProjects__flatCard-right">
+    <div class="flatCard__right-text ourProjects__flatCard-right-text">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
         ullamcorper eu mauris vitae posuere. Ut at luctus ligula. Nunc ante
