--- a/src/scss/main/hero.scss
+++ b/src/scss/main/hero.scss
@@ -549,6 +549,10 @@
     letter-spacing: 0.66px;
     color: #fff;
   }
+
+  button {
+    background: transparent;
+  }
 }
 
 .hero__dropdown .hero__dropdown-menu.active {
