--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -123,6 +123,8 @@ body {
 @import 'oneNews/ourLatest';
 @import 'oneNews/ourLatest';
 @import 'projects/ourProjects';
+@import 'oneProject/residence';
+@import 'oneProject/oneDonec';
 
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
