--- a/src/scss/components/flatCard.scss
+++ b/src/scss/components/flatCard.scss
@@ -33,6 +33,10 @@
       text-align: center;
       max-width: 363px;
     }
+    @media (max-width: 768px) {
+      text-align: center;
+      max-width: 367px;
+    }
     @media (max-width: 376px) {
       text-align: start;
       max-width: 298px;
