--- a/src/scss/main/projects.scss
+++ b/src/scss/main/projects.scss
@@ -424,6 +424,7 @@
 
   &__contentTop {
     opacity: 0;
+    transition: all 0.2s ease;
 
     @media(max-width: 1024px) {
       opacity: 1;
@@ -450,6 +451,7 @@
 
   &__contentBottom {
     opacity: 0;
+    transition: all 0.2s ease;
 
     @media(max-width: 1024px) {
       opacity: 1;
