--- a/src/scss/news/our.scss
+++ b/src/scss/news/our.scss
@@ -93,17 +93,36 @@
     @media (max-width: 376px) {
       display: none;
     }
-  }
+    button {
+      color: var(--5, #828282);
+      font-size: 11px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      letter-spacing: 0.66px;
+      background: inherit;
 
-  // .our__content-link
+      &:hover {
+        color: #080808;
+        transition: all 0.2s ease;
+      }
 
-  &__content-link {
-    color: var(--1, #080808);
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 0.66px;
+      &.active {
+        position: relative;
+        color: #080808;
+        &::after {
+          position: absolute;
+          content: "";
+          top: 133%;
+          left: 50%;
+          transform: translate(-50%);
+          height: 1px;
+          width: 100%;
+          opacity: 0.8;
+          background: #3a3e4b;
+        }
+      }
+    }
   }
 
   &__content-link_active {
