--- a/src/scss/projects/ourProjects.scss
+++ b/src/scss/projects/ourProjects.scss
@@ -1,4 +1,5 @@
 .ourProjects {
+  margin-bottom: 0;
   // .ourProjects__container
 
   &__container {
@@ -10,17 +11,40 @@
     display: flex;
     justify-content: space-between;
     max-width: 1177px;
-    padding-bottom: 132px;
-    @media(max-width: 1024px) {
-        flex-direction: column;
-        padding-left: 103px;
-        padding-bottom: 109px;
+    padding-bottom: 130px;
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      padding-left: 103px;
+      padding-bottom: 109px;
+    }
+    @media(max-width: 768px) {
+      padding-left: 75px;
+      padding-bottom: 97px;
+    }
+    @media(max-width: 575px) {
+      padding-left: 0;
+    }
+    @media(max-width: 376px) {
+      padding-bottom: 65px;
     }
   }
 
   // .ourProjects__content-wrap
 
   &__content-wrap {
+  }
+
+  &__inner-item {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    @media(max-width: 1024px) {
+      gap: 5px;
+    }
+    @media(max-width: 376px) {
+      gap: 1px;
+    }
   }
 
   // .ourProjects__content-title
@@ -32,10 +56,14 @@
     font-weight: 700;
     line-height: normal;
     padding-left: 133px;
-    @media(max-width: 1024px) {
-        padding-left: 0;
-        font-size: 32px;
-        padding-bottom: 13px;
+    @media (max-width: 1024px) {
+      padding-left: 0;
+      font-size: 32px;
+      padding-bottom: 13px;
+    }
+    @media (max-width: 376px) {
+      font-size: 26px;
+      padding-bottom: 15px;
     }
   }
 
@@ -49,8 +77,11 @@
     line-height: 170.66%; /* 23.892px */
     max-width: 449px;
     padding-bottom: 33px;
-    @media(max-width: 1024px) {
-       padding-bottom: 37px;
+    @media (max-width: 1024px) {
+      padding-bottom: 37px;
+    }
+    @media (max-width: 376px) {
+      padding-bottom: 27px;
     }
   }
 
@@ -60,25 +91,115 @@
     display: flex;
     justify-content: space-between;
     max-width: 360px;
-    @media(max-width: 1024px) {
-        max-width: 347px;
-     }
-  }
+    @media (max-width: 1024px) {
+      max-width: 347px;
+    }
+    @media (max-width: 376px) {
+      display: none;
+    }
 
-  // .ourProjects__content-link
+    button {
+      color: var(--5, #828282);
+      font-size: 11px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      letter-spacing: 0.66px;
+      background: inherit;
 
-  &__content-link {
-    color: var(--5, #828282);
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 0.66px;
-  }
-  
-  &__inner {
-    @media(max-width: 1024px) {
-        padding-bottom: 119px;
+      &:hover {
+        color: #080808;
+        transition: all 0.2s ease;
+      }
+
+      &.active {
+        position: relative;
+        color: #080808;
+        &::after {
+          position: absolute;
+          content: "";
+          top: 133%;
+          left: 50%;
+          transform: translate(-50%);
+          height: 1px;
+          width: 100%;
+          opacity: 0.8;
+          background: #3a3e4b;
+
+          @media(max-width: 768px) {
+            top: 113%;
+          }
+        }
+      }
     }
   }
+
+  &__inner {
+    @media (max-width: 1024px) {
+      padding-bottom: 119px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 108px;
+    }
+    @media (max-width: 376px) {
+      padding-bottom: 96px;
+    }
+
+  }
+
+  &__flatCard-wrapper {
+    padding-bottom: 181px;
+
+    @media(max-width: 1024px) {
+      padding-bottom: 128px;
+    }
+    @media(max-width: 768px) {
+      padding-bottom: 107px;
+    }
+    @media(max-width: 376px) {
+      padding-bottom: 96px;
+    }
+  }
+
+  &__card-bottom {
+    display: none; 
+    @media(max-width: 768px) {
+      display: block;
+    }
+  }
+  
+  &__content-dropdown {
+    display: none; 
+    @media(max-width: 376px) {
+      display: block;
+    }
+  }
+
+  &__dropdown-label {
+    width: 127px;
+    height: 29px;
+    padding: 10px 11px 9px 11px;
+    button {
+      background: transparent;
+    }
+  }
+
+  &__inner-card-desktop {
+    @media(max-width: 376px) {
+      display: none;
+    }
+  }
+
+  &__flatCard-right {
+    @media(max-width: 376px) {
+      padding-top: 13px;
+    }
+  }
+
+  &__flatCard-right-text {
+    @media(max-width: 376px) {
+      padding-bottom: 41px;
+    }
+  }
+
 }
