is finished one project page

--- a/src/components/flatCard.html
+++ b/src/components/flatCard.html
@@ -1,5 +1,5 @@
 <div class="flatCard__wrapper">
-  <div class="flatCard__left">
+  <div class="flatCard__left photos__flatCard-left">
     <div class="flatCard__left-title">
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
     </div>
