--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -125,6 +125,8 @@ body {
 @import 'projects/ourProjects';
 @import 'oneProject/residence';
 @import 'oneProject/oneDonec';
+@import 'oneProject/photos';
+@import 'oneProject/perfect';
 
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
