--- a/src/scss/oneProject/residence.scss
+++ b/src/scss/oneProject/residence.scss
@@ -1,14 +1,10 @@
 .residence {
-    position: relative;
-    @media(max-width: 1025px) {
-        min-height: 703px;
-    }
-    @media(max-width: 768px) {
-        min-height: 960px;
-    }
-    @media(max-width: 575px) {
-        min-height: 575px;
-    }
+  position: relative;
+
+  @media(max-width: 575px) {
+    margin-bottom: 83px;
+  }
+
   // .residence__bg
 
   &__bg {
@@ -18,8 +14,15 @@
     width: 100%;
     object-fit: cover;
     z-index: -1;
-    @media(max-width: 1025px) {
-        min-height: 100%;
+    height: 744px;
+    @media (max-width: 1025px) {
+      height: 704px;
+    }
+    @media (max-width: 768px) {
+      height: 960px;
+    }
+    @media (max-width: 575px) {
+      height: 575px;
     }
   }
 
