start work with about page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -127,6 +127,8 @@ body {
 @import 'oneProject/oneDonec';
 @import 'oneProject/photos';
 @import 'oneProject/perfect';
+@import 'about/philocophy';
+@import 'about/companyTop';
 
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
