--- a/src/scss/main/work.scss
+++ b/src/scss/main/work.scss
@@ -90,11 +90,16 @@
   &__flats {
     a {
       position: absolute;
-      transition: all 0.2s ease;
+      
 
       @media (min-width: 998px) {
         &:hover {
-          padding: 20px;
+          // padding: 20px;
+          img {
+            transition: all 2s ease;
+            width: 110%;
+          }
+          
         }
       }
     }
@@ -105,6 +110,7 @@
   &__flat1 {
     left: -206px;
     top: 21px;
+    z-index: 2;
     @media (max-width: 1025px) {
       left: -175px;
       top: 64px;
@@ -139,7 +145,7 @@
   &__flat2 {
     left: 79px;
     top: -101px;
-    z-index: -1;
+    z-index: 1;
     @media (max-width: 1025px) {
       left: -50px;
       top: -39px;
@@ -174,7 +180,7 @@
   &__flat3 {
     top: -307px;
     right: 255px;
-    z-index: -1;
+    z-index: 2;
     @media (max-width: 1025px) {
       top: -216px;
       right: 220px;
@@ -206,7 +212,7 @@
   &__flat4 {
     top: -100px;
     right: 47px;
-    z-index: -2;
+    z-index: 1;
     @media (max-width: 1025px) {
       top: -40px;
       right: 45px;
@@ -235,7 +241,7 @@
   &__flat5 {
     left: -191px;
     bottom: -253px;
-    z-index: -1;
+    z-index: 1;
     @media (max-width: 1025px) {
       display: none;
     }
@@ -256,6 +262,7 @@
   &__flat6 {
     left: 214px;
     bottom: -101px;
+    z-index: 1;
     @media (max-width: 1025px) {
       left: 4px;
       bottom: -61px;
@@ -287,7 +294,7 @@
   &__flat7 {
     left: 49.2%;
     bottom: -210px;
-    z-index: -1;
+    z-index: 1;
     @media (max-width: 1025px) {
       left: 47.2%;
       bottom: -154px;
@@ -319,7 +326,7 @@
   &__flat8 {
     right: -152px;
     bottom: -59px;
-    z-index: -1;
+    z-index: 1;
     @media (max-width: 1025px) {
       right: -206px;
       bottom: -26px;
