is finished about page and contact page

--- a/src/components/contacts.html
+++ b/src/components/contacts.html
@@ -1,4 +1,4 @@
-<div class="contacts__wrapper">
+<div class="contacts__wrapper mainContact__wrapper">
   <div class="contacts__title">
     <h3>Drop us a line</h3>
   </div>
