--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -129,6 +129,12 @@ body {
 @import 'oneProject/perfect';
 @import 'about/philocophy';
 @import 'about/companyTop';
+@import 'about/companyCenter';
+@import 'about/companyBottom';
+@import 'about/companyLorem';
+@import 'about/want';
+@import 'pageContact/mainContact';
+
 
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
