--- a/src/scss/about/companyTop.scss
+++ b/src/scss/about/companyTop.scss
@@ -1,5 +1,5 @@
 .companyTop {
-  margin-bottom: 104px;
+  margin-bottom: 244px;
   // .companyTop__container
 
   &__container {
@@ -11,6 +11,11 @@
   &__wrapper {
     display: flex;
     justify-content: space-between;
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   // .companyTop__left
@@ -18,6 +23,15 @@
   &__left {
     position: relative;
     padding: 201px 10px 0px 199px;
+    @media (max-width: 1255px) {
+      padding-left: 0;
+    }
+    @media (max-width: 1024px) {
+      padding: 101px 10px 0px 0px;
+    }
+    @media (max-width: 1024px) {
+      padding-top: 0;
+    }
   }
 
   // .companyTop__left-title
@@ -30,6 +44,13 @@
     line-height: normal;
     max-width: 383px;
     padding-bottom: 12px;
+    @media(max-width: 768px) {
+      font-size: 32px;
+      max-width: 350px;
+    }
+    @media(max-width: 575px) {
+      font-size: 26px;
+    }
   }
 
   // .companyTop__left-text
@@ -50,6 +71,17 @@
     position: relative;
     left: 37px;
     top: 103px;
+    @media (max-width: 575px) {
+      left: 80px;
+      max-width: 550px;
+    }
+    @media (max-width: 390px) {
+      left: 90px;
+      max-width: 540px;
+    }
+    @media (max-width: 370px) {
+      left: 80px;
+    }
   }
 
   // .companyTop__swiper
@@ -71,6 +103,12 @@
     display: flex;
     gap: 11px;
     align-items: center;
+    @media (max-width: 1255px) {
+      left: 0;
+    }
+    @media (max-width: 1024px) {
+      bottom: -54px;
+    }
   }
   &__button-next {
     color: var(--5, #828282);
@@ -86,6 +124,13 @@
     display: flex;
     gap: 11px;
     align-items: center;
+    @media (max-width: 1052px) {
+      right: 54px;
+    }
+    @media (max-width: 1024px) {
+      bottom: -54px;
+      right: 74px;
+    }
   }
 
   &__swiper-slide {
@@ -93,6 +138,18 @@
       width: 552px;
       height: 444px;
       object-fit: cover;
+      @media(max-width: 768px) {
+        width: 450px;
+        height: 350px;
+      }
+      @media(max-width: 575px) {
+        width: 340px;
+        height: 300px;
+      }
+      @media(max-width: 370px) {
+        width: 290px;
+        height: 290px;
+      }
     }
   }
 }
@@ -107,6 +164,22 @@
   background: #cecaca;
   top: 445px;
   left: 242px;
+  @media (max-width: 1255px) {
+    left: 43px;
+  }
+  @media (max-width: 1024px) {
+    top: 345px;
+  }
+  @media (max-width: 768px) {
+    top: 335px;
+  }
+  @media (max-width: 575px) {
+    width: 180px;
+    top: 210px;
+  }
+  @media (max-width: 350px) {
+    width: 140px;
+  }
 
   span {
     background-color: rgba(130, 130, 130, 1);
