--- a/src/scss/about/philocophy.scss
+++ b/src/scss/about/philocophy.scss
@@ -1,7 +1,10 @@
 .philocophy {
   position: relative;
   margin-bottom: 260px;
-  @media(max-width: 575px) {
+  @media (max-width: 768px) {
+    margin-bottom: 376px;
+  }
+  @media (max-width: 575px) {
     margin-bottom: 174px;
   }
 
@@ -19,11 +22,11 @@
     width: 100%;
     img {
       width: 100%;
-      height: 648px;
-      object-fit: cover;
-      @media(max-width: 575px) {
+      height: 745px;
+      @media (max-width: 575px) {
         height: 470px;
-    }
+        object-fit: cover;
+      }
     }
   }
 
@@ -43,16 +46,17 @@
     line-height: normal;
     max-width: 383px;
     margin: 0 auto;
-    padding-top: 230px;
+    padding-top: 326px;
     padding-bottom: 11px;
-    @media(max-width: 768px) {
-        font-size: 32px;
-        max-width: 346px;
-        padding-top: 180px;
+    @media (max-width: 768px) {
+      font-size: 32px;
+      max-width: 346px;
+      padding-top: 280px;
     }
-    @media(max-width: 575px) {
-        font-size: 26px;
-        max-width: 283px;
+    @media (max-width: 575px) {
+      font-size: 26px;
+      max-width: 283px;
+      padding-top: 173px;
     }
   }
 
