--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -3,7 +3,9 @@
   min-height: 96px;
   display: flex;
   align-items: center;
-  z-index: 2;
+  z-index: 5;
+  position: fixed;
+  width: 100%;
 
   @media (max-width: 768px) {
     min-height: 95px;
