--- a/src/scss/oneProject/photos.scss
+++ b/src/scss/oneProject/photos.scss
@@ -4,6 +4,7 @@
   height: 1320px;
   @media (max-width: 1025px) {
     margin-top: 125px;
+    margin-bottom: 0;
   }
   @media (max-width: 768px) {
     margin-top: 105px;
