--- a/src/scss/projects/ourProjects.scss
+++ b/src/scss/projects/ourProjects.scss
@@ -1,5 +1,15 @@
 .ourProjects {
   margin-bottom: 0;
+  margin-top: 208px;
+  @media(max-width: 1024px) {
+    margin-top: 161px;
+  }
+  @media(max-width: 768px) {
+    margin-top: 138px;
+  }
+  @media(max-width: 376px) {
+    margin-top: 115px;
+  }
   // .ourProjects__container
 
   &__container {
