remade on grid and to fixed problem when scroll in open burgerMenu and made up for pop up

--- a/src/scss/components/flatCard.scss
+++ b/src/scss/components/flatCard.scss
@@ -122,6 +122,12 @@
     @media (max-width: 1024px) {
       display: none;
     }
+    img {
+      transition: all 0.2s ease;
+      &:hover {
+        transform: scale(1.3);
+      }
+    }
   }
 
   // .flatCard__img
