--- a/src/scss/main/company.scss
+++ b/src/scss/main/company.scss
@@ -380,7 +380,7 @@
       max-width: 313px;
     }
     @media (max-width: 769px) {
-      max-width: 295px;
+      width: 295px;
     }
     p {
       color: var(--1, #080808);
