pop-up is finished and done validation

--- a/src/components/contacts.html
+++ b/src/components/contacts.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 <div class="contacts__bottom-mobile">
-  <a href="#" class="contacts__button button"> Make request </a>
+  <a href="#" class="contacts__button popUp__btn button"> Make request </a>
   <div class="contacts__bottom-link contacts__link">
     <a href="#" class="contacts__link-link"> info@gmail.com </a>
     <div class="contacts__link-wrapper">
