--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -225,6 +225,13 @@
     background: #fff;
     color: #000;
     position: relative;
+    transition: all 0.2s ease;
+    @media(min-width: 998px) {
+      &:hover {
+        background: grey;
+        color: #fff;
+      }
+    }
 
     @media (max-width: 1024px) {
       width: 184px;
