--- a/src/components/flatCard.html
+++ b/src/components/flatCard.html
@@ -12,7 +12,7 @@
         felis, aliquam eu enim sed, ornare pretium velit.
       </p>
     </div>
-    <a href="#" class="flatCard__right-button button">
+    <a href="#" class="flatCard__right-button popUp__btn button">
         Make request
     </a>
   </div>
