--- a/src/scss/components/flatCard.scss
+++ b/src/scss/components/flatCard.scss
@@ -101,6 +101,13 @@
     border: 1px solid;
     background: #fff;
     color: #000;
+    transition: all 0.2s ease;
+    @media(min-width: 998px) {
+      &:hover {
+        background: grey;
+        color: #fff;
+      }
+    }
 
     @media (max-width: 1024px) {
       margin: 0 auto;
