--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -30,9 +30,16 @@
     line-height: normal;
     letter-spacing: 0.66px;
     color: #000;
+    transition: all 0.2s ease;
 
     @media(max-width: 1024px) {
         width: 158px;
         height: 40px;
+    }
+    @media(min-width: 998px) {
+        &:hover {
+            background: #000;
+            color: #fff;
+        }
     }
 }
