to fixed bug with cards

--- a/src/scss/projects/ourProjects.scss
+++ b/src/scss/projects/ourProjects.scss
@@ -218,4 +218,11 @@
     }
   }
 
+  &__card-commerce-mobile {
+    display: none; 
+    @media(max-width: 768px) {
+      display: block;
+    }
+  }
+
 }
