--- a/src/scss/components/flatCard.scss
+++ b/src/scss/components/flatCard.scss
@@ -105,6 +105,7 @@
     @media(min-width: 998px) {
       &:hover {
         background: grey;
+        border: none;
         color: #fff;
       }
     }
