--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -130,6 +130,7 @@ body {
 @import 'about/want';
 @import 'pageContact/mainContact';
 @import 'popUp/popUp';
+@import 'popUpValid/popUpValid';
 
 
 
