to fixed bug with form and fixed bug with popup

--- a/src/scss/popUpValid/popUpValid.scss
+++ b/src/scss/popUpValid/popUpValid.scss
@@ -21,6 +21,7 @@
     position: absolute;
     top: 40px;
     right: 40px;
+    cursor: pointer;
     @media(max-width: 376px) {
       top: 25px;
       right: 25px;
