--- a/src/scss/popUp/popUp.scss
+++ b/src/scss/popUp/popUp.scss
@@ -11,7 +11,7 @@
     height: 100%;
     background-color: #000;
     z-index: 10;
-    max-width: unset;
+    max-width: unset !important;
     overflow-y: auto;
     @media(max-width: 700px) {
       padding-left: 21px;
