--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -96,8 +96,6 @@
       }
     }
     
-   
-
     @media (max-width: 575px) {
       display: none;
     }
@@ -228,7 +226,7 @@
       color: #fff;
       @media (min-width: 920px) {
         &:hover {
-          color: #ff56f6;
+          color: grey;
           transition: all 0.2s ease;
         }
       }
