--- a/src/scss/popUp/popUp.scss
+++ b/src/scss/popUp/popUp.scss
@@ -130,12 +130,11 @@
     }
   }
 
-
-
   &__validate-text {
     font-size: 10px;
     color: red;
     position: absolute;
+    pointer-events: none;
   }
 }
 .popUp-content {
@@ -146,12 +145,15 @@
     margin: 75px auto;
     background: var(--2, #f2f2f2);
     min-height: 803px;
-    @media(max-width: 1025px) {
+    @media(max-width: 1024px) {
       max-width: 808px;
       margin: 45px auto;
       min-height: 664px;
     }
     @media(max-width: 935px) {
+      max-width: 562px;
+    }
+    @media(max-width: 768px) {
       max-width: 562px;
     }
     @media(max-width: 700px) {
