--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -131,6 +131,7 @@ body {
 @import 'pageContact/mainContact';
 @import 'popUp/popUp';
 @import 'popUpValid/popUpValid';
+@import 'preloader/preloader';
 
 
 
