to fixed bug with button and add popup on all pages

--- a/src/scss/layout/headerBlack.scss
+++ b/src/scss/layout/headerBlack.scss
@@ -124,6 +124,12 @@
       color: #000;
     }
   }
+
+  &__button {
+    @media(max-width: 575px) {
+      display: none;
+    }
+  }
 }
 
 .menu {
